# dummy_cxx_benchmarks

./: .gitignore  CMakeLists.txt  README.md  build_all.sh  run_benchmarks.sh
src/: CMakeLists.txt  min_max.cpp  min_max_mean.cpp  tests.cpp
src/lib/: generate.h  pp.h
src/min_max/: CMakeLists.txt  bench.cpp  min_max.cpp  min_max.h  tests.cpp
